# ScrapyJob-Insight

./: .gitignore  app.py  main.py  procces_data.py  pyproject.toml
Agent/: agent.py  model.py  prompt.py  schema.py
Agent/prompts/: system.yml
config/: settings.py
data/: jobs.csv  jobs_proccess.csv
databases/: db_config.py
databases/functions/: jobs.py
databases/models/: jobs.py
scrapyn/site/: linkedin.py  sites.py
utils/: procces_data.py  procces_page.py
