[project]
name = "main-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.4.7",
    "bs4>=0.0.2",
    "groq>=1.0.0",
    "ollama>=0.6.1",
    "openai>=2.16.0",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.16.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.53.1",
    "streamlit-ace>=0.1.1",
]
